сократить запись с помощью Optional